--- a/c.html
+++ b/c.html
@@ -7,27 +7,35 @@
 </head>
 <body>
 <div>
-        <table border="2"width="100%">
+        <table border="15"width="100%">
         <tr>
             <td>
-                <h1 align="center">
+                <h1 align="center"> 
                     DATA
                 </h1>
                 <hr>
-                <table border="1"width="10%" cellpadding="50" align="right" align="center">
+                <table border="18"width="10" cellpadding="10" align="right" align="center">
                     <tr><td>
-                        Photo
+                        <img src="https://picsum.photos/300?random=1" alt="" width="80">
+                         <pre>   Photo</pre>
                     </td>
                 </tr>
                 </table> <br>
-                <br> <br> <br>
+                <br> <br> 
                 <b>
-                    ENTER YOUR NAME* : ........................................................... <br><br><br>
-                ENTER YOUR FATHER NAME* : ........................................................... <br><br><br>
-                ENTER YOUR COLLEGE NAME* : ........................................................... <br><br><br>
-                ENTER YOUR SEMESTAR AND SPI* : ........................................................... <br><br><br>
-                ENTER YOUR MOBAIL NO.* : (+91)...................................................... <br><br><br>
-                ENTER YOUR HOME ADDRESS* : ........................................................... 
+                    <table border="0" align="left"width="80"><tr><td align="center">
+                        <img src="imeg/imeg_4.jpg" alt=""hight="1"width="400">
+                    </td></tr></table>
+                  <table ><tr><td> <br><br><br><br>
+                    <u>
+                        ENTER YOUR NAME* : ........................................................... <br><br><br>
+                    ENTER YOUR FATHER NAME* : ........................................................... <br><br><br>
+                    ENTER YOUR COLLEGE NAME* : ........................................................... <br><br><br>
+                    ENTER YOUR SEMESTAR AND SPI* : ........................................................... <br><br><br>
+                    ENTER YOUR MOBAIL NO.* : (+91)...................................................... <br><br><br>
+                    ENTER YOUR HOME ADDRESS* : ...........................................................
+                    </u>
+                  </td></tr></table> 
                 </b><br><br><br><br>
                 
                 <table align="center">
