--- a/1site/home.html
+++ b/1site/home.html
@@ -18,8 +18,8 @@
     
     <img src="imeg-1/logo.png" alt="logo" width="10%" align="center">
 
-    <font size="8">&nbsp;Wellcome To Your Favourite Dish Details</font><br>
-    <u><a target="_blank" href="login.html">Log In</a></u>
+    <font size="8">&nbsp;Wellcome To Your Favourite Dish Details</font><br><br>
+    <u><button><a target="_blank" href="login.html">Log In</a></button></u>
 </div>
                     <!-- <div align="right"border="9"><u><a href="login.html">Log In</a></u></div> -->
                 
