--- a/2site/home.html
+++ b/2site/home.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-         #first {
-    background-color: #feeaf7;
-  }
+        #first {
+            background-color: #feeaf7;
+        }
     </style>
 </head>
 
@@ -51,6 +51,43 @@
             participating teams, Player of the Match and Player of the Series. Let’s have a look at the table of IPL
             winners list from 2008 to 2023
         </p><br><br>
+
+        <table border="0" align="center">
+            <tr>
+                <td>
+                     <img src="csk.jfif" height="100px" alt="">
+                </td>
+                <td>
+             <img src="Gujarat_Titans_logo.webp" height="100px" alt="">
+                </td>
+                <td>
+                    <img src="65267d7953e9ac5aa0d77c2f_mumbai indians thumbnail (1).png" height="100px" alt="">
+                </td>
+                <td>
+                    <img src="raj 2e806426a58732ebe889e32970aecbb7.jpg" height="100px" alt="">
+                </td>
+                <td>
+                    <img src="pbnk.jpg" height="100px" alt="">
+                </td>
+                <td>
+                    <img src="delhi 35087eada185f7ca06fc9883de8f0420.jpg" height="100px" alt="">
+                </td>
+                <td>
+                    <img src="lucknow-logo-2503220.jpg" height="100px" alt="">
+                </td>
+                <td>
+                    <img src="KOLKATA 1e0cb56e44ebf1f8af50d659c6c67288.png" height="100px" alt="">
+                </td>
+                <td>
+                    <img src="sunriserhydrabadlogo-98.jpg" height="100px" alt="">
+                </td>
+                <td>
+                    <img src="bangalore 1r5vdst_rcb_625x300_14_February_20.webp" height="100px" alt="">
+                </td>
+            </tr>
+        </table><br><br><br>
+
+
         <table border="1" width="100%" align="center">
             <thead align="center">
                 <tr>
@@ -103,7 +140,7 @@
 
                 </td>
                 <td>
-                    <font size="5"><b> <a href="2023.html">MORE</a></b></font>
+                    <font size="5"><b> <a href="2023.html">Video</a></b></font>
                 </td>
             </tr>
 
@@ -133,7 +170,7 @@
 
                 </td>
                 <td>
-                    <font size="5"><b> <a href="2022.html">MORE</a></b></font>
+                    <font size="5"><b> <a href="2022.html">Video</a></b></font>
                 </td>
             </tr>
 
@@ -163,7 +200,7 @@
 
                 </td>
                 <td>
-                    <font size="5"><b> <a href="2021.html">MORE</a></b></font>
+                    <font size="5"><b> <a href="2021.html">Video</a></b></font>
                 </td>
             </tr>
 
@@ -193,11 +230,11 @@
 
                 </td>
                 <td>
-                    <font size="5"><b> <a href="2020.html">MORE</a></b></font>
+                    <font size="5"><b> <a href="2020.html">Video</a></b></font>
                 </td>
             </tr>
 
-            <tr align="center"id="first">
+            <tr align="center" id="first">
                 <td>
                     <font size="5"><b>2019</b></font>
 
@@ -223,7 +260,7 @@
 
                 </td>
                 <td>
-                    <font size="5"><b> <a href="2019.html">MORE</a></b></font>
+                    <font size="5"><b> <a href="2019.html">Video</a></b></font>
                 </td>
             </tr>
 
@@ -253,11 +290,11 @@
 
                 </td>
                 <td>
-                    <font size="5"><b> <a href="2018.html">MORE</a></b></font>
+                    <font size="5"><b> <a href="2018.html">Video</a></b></font>
                 </td>
             </tr>
 
-            <tr align="center"id="first">
+            <tr align="center" id="first">
                 <td>
                     <font size="5"><b>2017</b></font>
 
@@ -283,7 +320,7 @@
 
                 </td>
                 <td>
-                    <font size="5"><b> <a href="2017.html">MORE</a></b></font>
+                    <font size="5"><b> <a href="2017.html">Video</a></b></font>
                 </td>
             </tr>
 
@@ -314,11 +351,11 @@
 
                 </td>
                 <td>
-                    <font size="5"><b> <a href="2016.html">MORE</a></b></font>
+                    <font size="5"><b> <a href="2016.html">Video</a></b></font>
                 </td>
             </tr>
 
-            <tr align="center"id="first">
+            <tr align="center" id="first">
                 <td>
                     <font size="5"><b>2015</b></font>
 
@@ -344,7 +381,7 @@
 
                 </td>
                 <td>
-                    <font size="5"><b> <a href="2015.html">MORE</a></b></font>
+                    <font size="5"><b> <a href="2015.html">Video</a></b></font>
                 </td>
             </tr>
 
@@ -374,11 +411,11 @@
 
                 </td>
                 <td>
-                    <font size="5"><b> <a href="2014.html">MORE</a></b></font>
+                    <font size="5"><b> <a href="2014.html">Video</a></b></font>
                 </td>
             </tr>
 
-            <tr align="center"id="first">
+            <tr align="center" id="first">
                 <td>
                     <font size="5"><b>2013</b></font>
 
@@ -404,7 +441,7 @@
 
                 </td>
                 <td>
-                    <font size="5"><b> <a href="2013.html">MORE</a></b></font>
+                    <font size="5"><b> <a href="2013.html">Video</a></b></font>
                 </td>
             </tr>
 
@@ -434,11 +471,11 @@
 
                 </td>
                 <td>
-                    <font size="5"><b> <a href="2012.html">MORE</a></b></font>
+                    <font size="5"><b> <a href="2012.html">Video</a></b></font>
                 </td>
             </tr>
 
-            <tr align="center"id="first">
+            <tr align="center" id="first">
                 <td>
                     <font size="5"><b>2011</b></font>
 
@@ -464,7 +501,7 @@
 
                 </td>
                 <td>
-                    <font size="5"><b> <a href="2011.html">MORE</a></b></font>
+                    <font size="5"><b> <a href="2011.html">Video</a></b></font>
                 </td>
             </tr>
 
@@ -494,11 +531,11 @@
 
                 </td>
                 <td>
-                    <font size="5"><b> <a href="2010.html">MORE</a></b></font>
+                    <font size="5"><b> <a href="2010.html">Video</a></b></font>
                 </td>
             </tr>
 
-            <tr align="center"id="first">
+            <tr align="center" id="first">
                 <td>
                     <font size="5"><b>2009</b></font>
 
@@ -524,7 +561,7 @@
 
                 </td>
                 <td>
-                    <font size="5"><b> <a href="2009">MORE</a></b></font>
+                    <font size="5"><b> <a href="2009">Video</a></b></font>
                 </td>
             </tr>
 
@@ -554,7 +591,7 @@
 
                 </td>
                 <td>
-                    <font size="5"><b> <a href="2008.html">MORE</a></b></font>
+                    <font size="5"><b> <a href="2008.html">Video</a></b></font>
                 </td>
             </tr>
 
