--- a/2site/loin.html
+++ b/2site/loin.html
@@ -43,7 +43,7 @@
                                 </div><br><br>
 
                                 <div align="center">
-                                    <b>Select Your State Team</b> :
+                                    <b>Select Your State Of Team</b> :
                                     <select name="state" id="state">
                                         <option value="">select state</option>
                                         <option value="1">Gujarat</option>
